deployment/kafka-cost-control/dev/kafka-cost-control-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-cost-control-ui-ingress
spec:
  rules:
    - host: "kcc.collaud7.collaud.me"
