deployment/kafka-cost-control/dev/virtual-service.yaml
# TODO convert to ingress

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-cost-control-virtualservice
spec:
  hosts:
    - "kafka-cost-control.your-domain.com"
